# llm_router

./: .env.example  .gitignore  INTERNAL_NOTES.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
config/: models.yaml  policy.yaml
dashboard/: .gitkeep  app.py
examples/: demo_fallback.py  demo_routing.py  demo_with_semcache.py
llmrouter/: __init__.py  client.py  config.py  fallback.py  metrics.py  registry.py  router.py  tracing.py  verify.py
llmrouter/classifier/: __init__.py  embedding.py  llm.py  rules.py
server/: .gitkeep  dashboard.py  proxy.py
tests/: test_classifier.py  test_fallback.py  test_metrics.py  test_router.py  test_rules.py
